CPP/ifceditor_v1/ifceditor/ifcengine/include/ifcengine.h

#define		sdaiAGGR				sdaiADB + 1
#define		sdaiINSTANCE			sdaiENUM + 1
#define		sdaiSTRING				sdaiREAL + 1
typedef	int_t			* SdaiAggr;
typedef	void			* SdaiAttr;
typedef	int_t			SdaiEntity;
typedef	int_t			SdaiInstance;
typedef	int_t			SdaiInteger;
typedef	int_t			SdaiModel;
typedef	int_t			SdaiPrimitiveType;
typedef	void			* SdaiADB;
int_t			DECL STDC	GetSPFFHeaderItem(
									SdaiModel				model,
									int_t					itemIndex,
									int_t					itemSubIndex,
									SdaiPrimitiveType		valueType,
									const char				** value
								);
static	inline	int_t	GetSPFFHeaderItem(
								SdaiModel				model,
								int_t					itemIndex,
								int_t					itemSubIndex,
								SdaiPrimitiveType		valueType,
								char					** value
							)
{
	return	GetSPFFHeaderItem(
					model,
					itemIndex,
					itemSubIndex,
					valueType,
					(const char**) value
				);
}
int_t			DECL STDC	GetSPFFHeaderItemUnicode(
									SdaiModel				model,
									int_t					itemIndex,
									int_t					itemSubIndex,
									unsigned char			* buffer,
									int_t					bufferLength
								);
SdaiPrimitiveType	DECL STDC	sdaiGetADBType(
									const SdaiADB			ADB
								);
const char		DECL * STDC	sdaiGetADBTypePath(
									const SdaiADB			ADB,
									int_t					typeNameNumber
								);
const char		DECL * STDC	sdaiGetADBTypePathx(
									const SdaiADB			ADB,
									int_t					typeNameNumber,
									const char				** path
								);
static	inline	const char	* sdaiGetADBTypePathx(
									const SdaiADB			ADB,
									int_t					typeNameNumber,
									char					** path
								)
{
	return	sdaiGetADBTypePathx(
					ADB,
					typeNameNumber,
					(const char**) path
				);
}
static	inline	const char	* sdaiGetADBTypePathx(
									const SdaiADB			ADB,
									int_t					typeNameNumber
								)
{
	return	sdaiGetADBTypePathx(
					ADB,
					typeNameNumber,
					(const char**) nullptr				
				);
}
void			DECL * STDC	sdaiGetADBValue(
									const SdaiADB			ADB,
									SdaiPrimitiveType		valueType,
									void					* value
								);
void			DECL STDC	engiGetAggrType(
									const SdaiAggr			aggregate,
									SdaiPrimitiveType		* aggregateType
								);
void			DECL STDC	engiGetAggrTypex(
									const SdaiAggr			aggregate,
									SdaiPrimitiveType		* aggregateType
								);
void			DECL * STDC	sdaiGetAttr(
									SdaiInstance			instance,
									const SdaiAttr			attribute,
									SdaiPrimitiveType		valueType,
									void					* value
								);
void			DECL * STDC	sdaiGetAttrBN(
									SdaiInstance			instance,
									const char				* attributeName,
									SdaiPrimitiveType		valueType,
									void					* value
								);
static	inline	void	* sdaiGetAttrBN(
								SdaiInstance			instance,
								char					* attributeName,
								SdaiPrimitiveType		valueType,
								void					* value
							)
{
	return	sdaiGetAttrBN(
					instance,
					(const char*) attributeName,
					valueType,
					value
				);
}
int_t			DECL STDC	sdaiGetAttrBNUnicode(
									SdaiInstance			instance,
									const char				* attributeName,
									unsigned char			* buffer,
									int_t					bufferLength
								);
static	inline	int_t	sdaiGetAttrBNUnicode(
								SdaiInstance			instance,
								char					* attributeName,
								unsigned char			* buffer,
								int_t					bufferLength
							)
{
	return	sdaiGetAttrBNUnicode(
					instance,
					(const char*) attributeName,
					buffer,
					bufferLength
				);
}
char			DECL * STDC	sdaiGetStringAttrBN(
									SdaiInstance			instance,
									const char				* attributeName
								);
static	inline	char	* sdaiGetStringAttrBN(
								SdaiInstance			instance,
								char					* attributeName
							)
{
	return	sdaiGetStringAttrBN(
					instance,
					(const char*) attributeName
				);
}
SdaiInstance	DECL STDC	sdaiGetInstanceAttrBN(
									SdaiInstance			instance,
									const char				* attributeName
								);
static	inline	SdaiInstance	sdaiGetInstanceAttrBN(
										SdaiInstance			instance,
										char					* attributeName
									)
{
	return	sdaiGetInstanceAttrBN(
					instance,
					(const char*) attributeName
				);
}
SdaiAggr		DECL STDC	sdaiGetAggregationAttrBN(
									SdaiInstance			instance,
									const char				* attributeName
								);
static	inline	SdaiAggr	sdaiGetAggregationAttrBN(
									SdaiInstance			instance,
									char					* attributeName
								)
{
	return	sdaiGetAggregationAttrBN(
					instance,
					(const char*) attributeName
				);
}
SdaiAttr		DECL STDC	sdaiGetAttrDefinition(
									SdaiEntity				entity,
									const char				* attributeName
								);
static	inline	SdaiAttr	sdaiGetAttrDefinition(
									SdaiEntity				entity,
									char					* attributeName
								)
{
	return	sdaiGetAttrDefinition(
					entity,
					(const char*) attributeName
				);
}
SdaiEntity		DECL STDC	sdaiGetInstanceType(
									SdaiInstance			instance
								);
SdaiInteger		DECL STDC	sdaiGetMemberCount(
									SdaiAggr				aggregate
								);
int_t			DECL STDC	sdaiIsKindOf(
									SdaiInstance			instance,
									SdaiEntity				entity
								);
SdaiPrimitiveType	DECL STDC	engiGetAttrType(
									const SdaiAttr			attribute
								);
SdaiPrimitiveType	DECL STDC	engiGetAttrTypeBN(
									SdaiEntity				entity,
									const char				* attributeName
								);
static	inline	SdaiPrimitiveType	engiGetAttrTypeBN(
											SdaiEntity				entity,
											char					* attributeName
										)
{
	return	engiGetAttrTypeBN(
					entity,
					(const char*) attributeName
				);
}
int_t			DECL STDC	sdaiIsInstanceOf(
									SdaiInstance			instance,
									SdaiEntity				entity
								);
int_t			DECL STDC	sdaiIsInstanceOfBN(
									SdaiInstance			instance,
									const char				* entityName
								);
static	inline	int_t	sdaiIsInstanceOfBN(
								SdaiInstance			instance,
								char					* entityName
							)
{
	return	sdaiIsInstanceOfBN(
					instance,
					(const char*) entityName
				);
}
void			DECL * STDC	engiGetAggrElement(
									const SdaiAggr			aggregate,
									SdaiInteger				index,
									SdaiPrimitiveType		valueType,
									void					* value
								);