C#/StreamingSTPInOut-CS/StreamingIFCInOut-CS/STEPEngine.cs


		//
		//		GetSPFFHeaderItem                           (http://rdf.bg/ifcdoc/CS64/GetSPFFHeaderItem.html)
		//
		//	This call can be used to read a specific header item, the source code example is larger to show and explain how this call can be used.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "GetSPFFHeaderItem")]
        public static extern Int64 GetSPFFHeaderItem(Int64 model, Int64 itemIndex, Int64 itemSubIndex, Int64 valueType, out IntPtr value);

		//
		//		GetSPFFHeaderItemUnicode                    (http://rdf.bg/ifcdoc/CS64/GetSPFFHeaderItemUnicode.html)
		//
		//	This call can be used to write a specific header item, the source code example is larger to show and explain how this call can be used.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "GetSPFFHeaderItemUnicode")]
        public static extern Int64 GetSPFFHeaderItemUnicode(Int64 model, Int64 itemIndex, Int64 itemSubIndex, string buffer, Int64 bufferLength);

        [DllImport(STEPEngineDLL, EntryPoint = "GetSPFFHeaderItemUnicode")]
        public static extern Int64 GetSPFFHeaderItemUnicode(Int64 model, Int64 itemIndex, Int64 itemSubIndex, byte[] buffer, Int64 bufferLength);

        //
        //  Instance Reading API Calls
        //

		//
		//		sdaiGetADBType                              (http://rdf.bg/ifcdoc/CS64/sdaiGetADBType.html)
		//
		//	This call can be used to get the used type within this ADB type.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiGetADBType")]
        public static extern Int64 sdaiGetADBType(ref int_t ADB);

		//
		//		sdaiGetADBTypePath                          (http://rdf.bg/ifcdoc/CS64/sdaiGetADBTypePath.html)
		//
		//	This call can be used to get the path of an ADB type.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiGetADBTypePath")]
        public static extern IntPtr sdaiGetADBTypePath(ref int_t ADB, Int64 typeNameNumber);

		//
		//		sdaiGetADBTypePathx                         (http://rdf.bg/ifcdoc/CS64/sdaiGetADBTypePathx.html)
		//
		//	This call is the same as sdaiGetADBTypePath, however can be used by porting to languages that have issues with returned char arrays.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiGetADBTypePathx")]
        public static extern void sdaiGetADBTypePathx(ref int_t ADB, Int64 typeNameNumber, out IntPtr path);

		//
		//		sdaiGetADBValue                             (http://rdf.bg/ifcdoc/CS64/sdaiGetADBValue.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiGetADBValue")]
        public static extern void sdaiGetADBValue(ref int_t ADB, Int64 valueType, out int_t value);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiGetADBValue")]
        public static extern void sdaiGetADBValue(ref int_t ADB, Int64 valueType, out double value);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiGetADBValue")]
        public static extern void sdaiGetADBValue(ref int_t ADB, Int64 valueType, out IntPtr value);

		//
		//		engiGetAggrElement                          (http://rdf.bg/ifcdoc/CS64/engiGetAggrElement.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "engiGetAggrElement")]
        public static extern Int64 engiGetAggrElement(Int64 aggregate, Int64 elementIndex, Int64 valueType, out int_t value);

        [DllImport(STEPEngineDLL, EntryPoint = "engiGetAggrElement")]
        public static extern Int64 engiGetAggrElement(Int64 aggregate, Int64 elementIndex, Int64 valueType, out double value);

        [DllImport(STEPEngineDLL, EntryPoint = "engiGetAggrElement")]
        public static extern Int64 engiGetAggrElement(Int64 aggregate, Int64 elementIndex, Int64 valueType, out IntPtr value);

		//
		//		engiGetAggrType                             (http://rdf.bg/ifcdoc/CS64/engiGetAggrType.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "engiGetAggrType")]
        public static extern void engiGetAggrType(Int64 aggregate, out int_t aggragateType);

		//
		//		engiGetAggrTypex                            (http://rdf.bg/ifcdoc/CS64/engiGetAggrTypex.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "engiGetAggrTypex")]
        public static extern void engiGetAggrTypex(Int64 aggregate, out int_t aggragateType);

		//
		//		sdaiGetAttr                                 (http://rdf.bg/ifcdoc/CS64/sdaiGetAttr.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiGetAttr")]
        public static extern Int64 sdaiGetAttr(Int64 instance, Int64 attribute, Int64 valueType, out int_t value);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiGetAttr")]
        public static extern Int64 sdaiGetAttr(Int64 instance, Int64 attribute, Int64 valueType, out double value);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiGetAttr")]
        public static extern Int64 sdaiGetAttr(Int64 instance, Int64 attribute, Int64 valueType, out IntPtr value);

		//
		//		sdaiGetAttrBN                               (http://rdf.bg/ifcdoc/CS64/sdaiGetAttrBN.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiGetAttrBN")]
        public static extern Int64 sdaiGetAttrBN(Int64 instance, string attributeName, Int64 valueType, out int_t value);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiGetAttrBN")]
        public static extern Int64 sdaiGetAttrBN(Int64 instance, string attributeName, Int64 valueType, out double value);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiGetAttrBN")]
        public static extern Int64 sdaiGetAttrBN(Int64 instance, string attributeName, Int64 valueType, out IntPtr value);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiGetAttrBN")]
        public static extern Int64 sdaiGetAttrBN(Int64 instance, byte[] attributeName, Int64 valueType, out int_t value);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiGetAttrBN")]
        public static extern Int64 sdaiGetAttrBN(Int64 instance, byte[] attributeName, Int64 valueType, out double value);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiGetAttrBN")]
        public static extern Int64 sdaiGetAttrBN(Int64 instance, byte[] attributeName, Int64 valueType, out IntPtr value);

		//
		//		sdaiGetAttrBNUnicode                        (http://rdf.bg/ifcdoc/CS64/sdaiGetAttrBNUnicode.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiGetAttrBNUnicode")]
        public static extern Int64 sdaiGetAttrBNUnicode(Int64 instance, string attributeName, string buffer, Int64 bufferLength);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiGetAttrBNUnicode")]
        public static extern Int64 sdaiGetAttrBNUnicode(Int64 instance, byte[] attributeName, byte[] buffer, Int64 bufferLength);

		//
		//		sdaiGetStringAttrBN                         (http://rdf.bg/ifcdoc/CS64/sdaiGetStringAttrBN.html)
		//
		//	This function is a specific version of sdaiGetAttrBN(..), where the valueType is sdaiSTRING.
		//	This call can be usefull in case of specific programming languages that cannot map towards sdaiGetAttrBN(..) directly,
		//	this function is useless for languages as C, C++, C#, JAVA, VB.NET, Delphi and similar as they are able to map sdaiGetAttrBN(..) directly.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiGetStringAttrBN")]
        public static extern IntPtr sdaiGetStringAttrBN(Int64 instance, string attributeName);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiGetStringAttrBN")]
        public static extern IntPtr sdaiGetStringAttrBN(Int64 instance, byte[] attributeName);

		//
		//		sdaiGetInstanceAttrBN                       (http://rdf.bg/ifcdoc/CS64/sdaiGetInstanceAttrBN.html)
		//
		//	This function is a specific version of sdaiGetAttrBN(..), where the valueType is sdaiINSTANCE.
		//	This call can be usefull in case of specific programming languages that cannot map towards sdaiGetAttrBN(..) directly,
		//	this function is useless for languages as C, C++, C#, JAVA, VB.NET, Delphi and similar as they are able to map sdaiGetAttrBN(..) directly.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiGetInstanceAttrBN")]
        public static extern Int64 sdaiGetInstanceAttrBN(Int64 instance, string attributeName);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiGetInstanceAttrBN")]
        public static extern Int64 sdaiGetInstanceAttrBN(Int64 instance, byte[] attributeName);

		//
		//		sdaiGetAggregationAttrBN                    (http://rdf.bg/ifcdoc/CS64/sdaiGetAggregationAttrBN.html)
		//
		//	This function is a specific version of sdaiGetAttrBN(..), where the valueType is sdaiAGGR.
		//	This call can be usefull in case of specific programming languages that cannot map towards sdaiGetAttrBN(..) directly,
		//	this function is useless for languages as C, C++, C#, JAVA, VB.NET, Delphi and similar as they are able to map sdaiGetAttrBN(..) directly.
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiGetAggregationAttrBN")]
        public static extern Int64 sdaiGetAggregationAttrBN(Int64 instance, string attributeName);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiGetAggregationAttrBN")]
        public static extern Int64 sdaiGetAggregationAttrBN(Int64 instance, byte[] attributeName);

		//
		//		sdaiGetAttrDefinition                       (http://rdf.bg/ifcdoc/CS64/sdaiGetAttrDefinition.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiGetAttrDefinition")]
        public static extern Int64 sdaiGetAttrDefinition(Int64 entity, string attributeName);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiGetAttrDefinition")]
        public static extern Int64 sdaiGetAttrDefinition(Int64 entity, byte[] attributeName);

		//
		//		sdaiGetInstanceType                         (http://rdf.bg/ifcdoc/CS64/sdaiGetInstanceType.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiGetInstanceType")]
        public static extern Int64 sdaiGetInstanceType(Int64 instance);

		//
		//		sdaiGetMemberCount                          (http://rdf.bg/ifcdoc/CS64/sdaiGetMemberCount.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiGetMemberCount")]
        public static extern Int64 sdaiGetMemberCount(Int64 aggregate);

		//
		//		sdaiIsKindOf                                (http://rdf.bg/ifcdoc/CS64/sdaiIsKindOf.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiIsKindOf")]
        public static extern Int64 sdaiIsKindOf(Int64 instance, Int64 entity);

		//
		//		engiGetAttrType                             (http://rdf.bg/ifcdoc/CS64/engiGetAttrType.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "engiGetAttrType")]
        public static extern Int64 engiGetAttrType(Int64 instance, ref int_t attribute);

		//
		//		engiGetAttrTypeBN                           (http://rdf.bg/ifcdoc/CS64/engiGetAttrTypeBN.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "engiGetAttrTypeBN")]
        public static extern Int64 engiGetAttrTypeBN(Int64 instance, string attributeName);

        [DllImport(STEPEngineDLL, EntryPoint = "engiGetAttrTypeBN")]
        public static extern Int64 engiGetAttrTypeBN(Int64 instance, byte[] attributeName);

		//
		//		sdaiIsInstanceOf                            (http://rdf.bg/ifcdoc/CS64/sdaiIsInstanceOf.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiIsInstanceOf")]
        public static extern Int64 sdaiIsInstanceOf(Int64 instance, Int64 entity);

		//
		//		sdaiIsInstanceOfBN                          (http://rdf.bg/ifcdoc/CS64/sdaiIsInstanceOfBN.html)
		//
		//	...
		//
        [DllImport(STEPEngineDLL, EntryPoint = "sdaiIsInstanceOfBN")]
        public static extern Int64 sdaiIsInstanceOfBN(Int64 instance, string entityName);

        [DllImport(STEPEngineDLL, EntryPoint = "sdaiIsInstanceOfBN")]
        public static extern Int64 sdaiIsInstanceOfBN(Int64 instance, byte[] entityName);
